--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Progate</title>
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
-    <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
-    <p>自分のPCでWebページを開発する方法を学習しましょう</p>
-  </body>
-</html>
+<HTML>
+    <body>
+        <canvas width=300 height=300 id="ccc"></canvas>
+
+     <script>
+
+
+        let can = document.getElementById("ccc");
+        let con = can.getContext("2d");
+
+        con.fillStyle="red";
+        con.fillRect(0,0,100,100);
+
+        can.onmousemove = function(e){
+            let x = (Math.random()*400).toFixed();
+            let y = (Math.random()*400).toFixed();
+            can.style.position = "absolute"
+            can.style.left = x + "px";
+            can.style.top = y + "px";
+            
+        }
+
+
+     </script>
+
+
+
+
+    </body>
+</HTML>
